--- a/www/index.html
+++ b/www/index.html
@@ -16,27 +16,36 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    
+    <script src="http://maps.google.com/maps/api/js?key=AIzaSyDghiRbCQjbD0sqF8y_6Lb-hxfGVHFmch0&libraries=places"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+    
   </head>
   <body ng-app="starter" animation="slide-left-right-ios7">
     <!-- 
       The nav bar that will be updated as we navigate between views.
     -->
     <ion-nav-bar class="bar-stable nav-title-slide-ios7">
+      <ion-nav-buttons side="right">
+        <button class="button button-icon button-clear ion-navicon" menu-toggle="right">
+        </button>
+      </ion-nav-buttons>
       <ion-nav-back-button class="button-icon icon  ion-ios7-arrow-back">
         Back
       </ion-nav-back-button>
+
     </ion-nav-bar>
     <!-- 
       The views will be rendered in the <ion-nav-view> directive below
-      Templates are in the /templates folder (but you could also
-      have templates inline in this html file if you'd like).
+      Templates are in the /templates folder 
     -->
     <ion-nav-view></ion-nav-view>
+ 
   </body>
 </html>
