--- a/www/index.html
+++ b/www/index.html
@@ -15,14 +15,14 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
-    <!-- cordova script (this will be a 404 during development) -->
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+    <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
-    <!-- your app's js -->
+    <!-- the main js file-->
     <script src="js/app.js"></script>
-    
-    <script src="http://maps.google.com/maps/api/js?key=AIzaSyDghiRbCQjbD0sqF8y_6Lb-hxfGVHFmch0&libraries=places"></script>
+    <!-- ?key=AIzaSyDghiRbCQjbD0sqF8y_6Lb-hxfGVHFmch0&libraries=places -->
+    <script src="http://maps.google.com/maps/api/js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
     
