--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
 
     <!-- the main js file-->
     <script src="js/app.js"></script>
-    <script src="http://maps.google.com/maps/api/js"></script>
+    <script src="https://maps.google.com/maps/api/js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
     
