--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,7 @@
     <!-- the main js file-->
     <script src="js/app.js"></script>
 <script src="https://maps.google.com/maps/api/js?key=AIzaSyDIw5K4NFc76C6OxbN1KG-LHOzkeul0Pr4"></script>
+<!-- <script src="https://maps.google.com/maps/api/js?key=<%= GOOGLE_API_KEY %>"></script> -->
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
     
