--- a/www/index.html
+++ b/www/index.html
@@ -20,11 +20,14 @@
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
+    <!-- satellizer is used for authentication -->
+    <script src="lib/satellizer/dist/satellizer.js"></script>
 
     <!-- the main js file-->
     <script src="js/app.js"></script>
 <script src="https://maps.google.com/maps/api/js?key=AIzaSyDIw5K4NFc76C6OxbN1KG-LHOzkeul0Pr4"></script>
 <!-- <script src="https://maps.google.com/maps/api/js?key=<%= GOOGLE_API_KEY %>"></script> -->
+    <script src="js/user.service.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
     
